CHANGES for qb :: http://scytale.name/proj/qb/

Version 0.3.0 (2008-02-xx):
 - new: Official support for lighttpd.
 - new: Auto-detection of paths and required URL parts.
 - removed: QB_BASEURL constant; all that stuff is now configured via the qbURL
   class (if you need to configure anything at all).
 - qb-0.2.php is now using the new 0.5 classes internally, but it's still a
   long way to 0.5.
 - new: tsfix.php maintenance script fixes your timestamps.
 - new: Some more regexes in the default config.
 - new: Creation timestamps are now stored _in_ the .cre files as well.
 - Moved all kinds of files around; qb.php in the main directory is now just a
   wrapper for qb-0.2.php. It's the transition to 0.5 going on, but everything
   should work as it did before.
 - Template tag <qb:basepath/> has been renamed to <qb:urlpath/>, because a
   base path is something completely different: The basepath tag now contains
   the URL path to the directory where qb is installed (e.g. "/blog"), but not
   the path to the current article or directory. As mentioned above, you can
   find that information now in <qb:urlpath/>. Last but not least there's now
   <qb:handler/> which is the same as the basepath for the people who are
   using the .htaccess rewrite, but has an added 'qb.php' (or however you've
   named qb's handler script) for people who aren't (for example because they
   are using lighttpd).
 - Template tags documented in the README.html.

Version 0.2.2 (2007-05-06):
 - bugfix for 0.2.1: If the number of items was exactly divisible by
   QB_MAXITEMS, qb would calculate the page number as one too much, leaving you
   with an empty last page.

Version 0.2.1 (2007-05-06):
 - bugfix for 0.2: <qb:ifset> was not working like it should when nesting
   multiple ifsets that evaluated to false. This would for example seriously
   break the sample template when less than QB_MAXITEMS were in the blog. Fixed
   by using back references in two regexes now.
